<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/goodsname"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/goods_name"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="精选梁同新半只"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/huowei"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/goods_location"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FU1221"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/goodscode"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/goodsCode"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0196261301"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/batchnumber"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/batchNum"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="019626130188080081"
            android:textSize="14sp"
            android:textColor="@color/text_gray"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/unit"
            android:layout_marginLeft="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="箱"
            android:textSize="15sp"
            android:textColor="@color/text_gray"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specification"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/specifation"
            android:layout_marginLeft="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60瓶/箱"
            android:textSize="15sp"
            android:textColor="@color/text_gray"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/count"
            android:layout_marginLeft="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500"
            android:textSize="15sp"
            android:textColor="@color/text_gray"
            />
    </LinearLayout>
</LinearLayout>