<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:gravity="center_vertical"
        >
<TextView
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:text="@string/goodsname"
    style="@style/TitleTextStyle"
    />
        <TextView
            android:id="@+id/goodsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ContentTextStyle"
            android:text="精选200斤超大号梁同新"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        >
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/goodscode"
        style="@style/TitleTextStyle"
        />
        <TextView
            android:id="@+id/goods_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ContentTextStyle"
            android:text="010101010101010101010101"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        >
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/huowei"
        style="@style/TitleTextStyle"
        />
        <TextView
                android:id="@+id/locCode"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="LU4A01"
            style="@style/ContentTextStyle"
            />
    <TextView
        android:id="@+id/goods_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="数量:10瓶"
        style="@style/ContentTextStyle"
        />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ContentTextStyle"
            android:text="@string/firstonshelvedate"
            />
<TextView
    android:id="@+id/firstDate"
    android:layout_marginLeft="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/ContentTextStyle"
    android:text="06702"
    />
        <TextView

            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ContentTextStyle"
            android:text="@string/lastonshelvedate"
            />
        <TextView
            android:id="@+id/lastDate"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ContentTextStyle"
            android:text="06702"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_white"
        />
</LinearLayout>